zwave/Jasco/ZWA3017/59384 - In-Wall Toggle Dimmer, 700S/1.23/README.md
# DISCLAIMER:
The software is provided "as is" to provide our customers the ability to update our products. Jasco does not offer any express or implied warranty of any kind when using these files, including, but not limited to, warranties of merchantability, noninfringement, or fitness for a particular purpose.<br>
<br>
Jasco does not imply or guarantee that the software provided will meet your requirements or that the operation thereof will be uninterrupted or error-free, or that all errors will be corrected. Jasco does not assume any responsibility for product errors related to the use of the software contained within this repository. Jasco does not offer support on flashing firmware to the devices listed here and are only provided as a courtesy to our customers and the community.

## CONTENTS:
ZWA3017_Jasco_59384_1.23.gbl

## Z-WAVE DEVKIT VERSION:
7.15.40

## RELEASE NOTES:
v1.23: ORIGINAL RELEASE FOR MODEL 59384

## DATE CODES INSTALLED ON:
2243 THROUGH TBD

## CHANGELOG:
1. Original Release Firmware